force-app/main/default/objects/Ferramental__c/Ferramental__c.object-meta.xml
<CustomObject>
    <label>Montadora | Ferramental</label>
    <nameField>
        <label>Ferramental</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Montadora | Ferramental</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>