force-app/main/default/objects/Ferramental__c/fields/Comprador__c.field-meta.xml
<CustomField>
    <fullName>Comprador__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Comprador | Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Montadora | Ferramental</relationshipLabel>
    <relationshipName>Montadora_Ferramental</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>