force-app/main/default/objects/Ferramental__c/fields/Desc_Ferramenta__c.field-meta.xml
<CustomField>
    <fullName>Desc_Ferramenta__c</fullName>
    <label>Descrição Ferramenta</label>
    <type>TextArea</type>
</CustomField>