force-app/main/default/objects/Ferramental__c/fields/Funil__c.field-meta.xml
<CustomField>
    <fullName>Funil__c</fullName>
    <label>Funil Ferramental</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente Potencial</fullName>
                <default>true</default>
                <label>Cliente Potencial</label>
            </value>
            <value>
                <fullName>Contato Realizado</fullName>
            </value>
            <value>
                <fullName>Demostração Agendada</fullName>
            </value>
            <value>
                <fullName>Proposta Feita</fullName>
            </value>
            <value>
                <fullName>Negociações Iniciadas</fullName>
            </value>
            <value>
                <fullName>Negociações Encerradas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>