force-app/main/default/objects/Ferramental__c/fields/NCM__c.field-meta.xml
<CustomField>
    <fullName>NCM__c</fullName>
    <label>NCM</label>
    <type>TextArea</type>
</CustomField>