force-app/main/default/objects/Ferramental__c/fields/Obs__c.field-meta.xml
<CustomField>
    <fullName>Obs__c</fullName>
    <label>Observação</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>